WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48133
[Gtk] Fix canvas/philip/tests/2d.path.isPointInPath.nonfinite.html
https://bugs.webkit.org/show_bug.cgi?id=48133
Summary
[Gtk] Fix canvas/philip/tests/2d.path.isPointInPath.nonfinite.html
Andreas Kling
Reported
2010-10-22 07:48:22 PDT
canvas/philip/tests/2d.path.isPointInPath.nonfinite.html is currently skipped on Gtk+. Let's fix it!
Attachments
Proposed patch
(2.39 KB, patch)
2010-10-22 07:50 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-10-22 07:50:54 PDT
Created
attachment 71563
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2010-10-22 08:35:16 PDT
Comment on
attachment 71563
[details]
Proposed patch Clearing flags on attachment: 71563 Committed
r70307
: <
http://trac.webkit.org/changeset/70307
>
WebKit Commit Bot
Comment 3
2010-10-22 08:35:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug