2010-10-22  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Gtk] Fix canvas/philip/tests/2d.path.isPointInPath.nonfinite.html
        https://bugs.webkit.org/show_bug.cgi?id=48133

        * platform/gtk/Skipped: Unskip the now passing test.
2010-10-22  Andreas Kling  <kling@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Gtk] Fix canvas/philip/tests/2d.path.isPointInPath.nonfinite.html
        https://bugs.webkit.org/show_bug.cgi?id=48133

        * platform/graphics/cairo/PathCairo.cpp:
        (WebCore::Path::contains): Return false if any x or y are nonfinite.

Canonical link: https://commits.webkit.org/60858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70307 268f45cc-cd09-0410-ab3c-d52691b4dbfc